# raytorch

./: .gitignore  LICENSE  README.md  pyproject.toml
raytorch/: __init__.py  camera.py  raytracer.py  renderer.py  scene.py  torch_raytracer.py
raytorch/core/: __init__.py  matrix.py  rgb.py  vector.py
raytorch/surface/: __init__.py  ellipsoid.py  parallelogram.py  sphere.py
raytorch/texture/: __init__.py  fresnel_texture.py  image_texture.py  texture.py
raytorch/util/: __init__.py  annotations.py  math.py
scripts/: tomb.py
test/: tomb.py
tests/integration/: test_scene_tomb.py
tests/integration/fixtures/scenes/tomb/: tomb.py
tests/integration/fixtures/scenes/tomb/textures/: glass.py  metal.py
tests/integration/fixtures/scenes/tomb/textures/energy_pole/: roughness.tif
textures/TexturesCom_MedievalFloor9Path_1K/: diffuse.tiff
